added action section

--- a/index.html
+++ b/index.html
@@ -16,17 +16,41 @@
     <header>
         <nav>
             <H3 class="nav-title">LOGO</H3>
-            <a href=""><button class="btn-primary">Sign Up</button></a>
-            <!-- <p>Cool Dark UI Template for Webflow Agencies!</p>
-            <a href=""><button>Stay Focused</button></a> -->
-            
-
-
+            <a href=""><button class="btn-primary nav-button">Sign Up</button></a>
         </nav>
+
+         <div class="banner">
+                <p class="banner-description">Cool Dark UI Template for Webflow Agencies!</p>
+            <a href=""><button class="btn-primary banner-button">Stay Focused</button></a>
+         </div>
 
     </header>
 
     <main>
+        <!-- Action Section -->
+
+        <section class="action">
+            <div>
+                <h3 class="action-header">See It in Action</h3>
+                <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
+                <a href=""><button class="btn-primary">Launch Live Preview</button></a>
+            </div>
+
+            <img class="a-image" src="Assets/wc-mini.png" alt="">
+
+        </section>
+
+        <!--  Productive Users Section -->
+          <section class="productive">
+            <div>
+                <h3>Joined Thousands of Productive Users</h3>
+            </div>
+            <div>
+                <ul>
+
+                </ul>
+            </div>
+          </section>
 
     </main>
 
